# fibonacci_spiral

./: README.md  fibonacci_spiral.py  pyproject.toml
ui/: index.html  style.css
